<resources>
    <string name="app_name">MusicSpace</string>
    <string name="exit_button_description">close</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account_login">Already have an account? Login</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_musicspace">Welcome To Musicspace</string>
    <string name="nav_browse">Browser</string>
    <string name="nav_playlist">Playlist</string>
    <string name="nav_library">Library</string>
    <string name="nav_search">Search</string>
    <string name="nav_user_profile">User Profile</string>
    <string name="nav_app_setting">App Setting</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="send">Send</string>
    <string name="password_reset">Password reset</string>
    <string name="a_za_z0_9_a_za_z0_9_a_za_z_2_6">^[A-Za-z0-9+_.-]+@([A-Za-z0-9.-]+\\.)+[A-Za-z]{2,6}$</string>
    <string name="user_info">User_info</string>
    <string name="user_name">name</string>
    <string name="user_email">email</string>
    <string name="user_phonenumber">phoneNumber</string>
    <string name="song_index">song_index</string>
</resources>
