<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- our app background image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_image"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_centerInParent="true">

        <!-- also including our app name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_musicspace"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"
            android:textColor="#2B2B2B" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- sign up -->
            <Button
                android:id="@+id/btnGoToSignup"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:layout_marginEnd="24dp"
                android:textColor="#2B2B2B"
                style="?android:attr/buttonBarButtonStyle" />

            <!-- login -->
            <Button
                android:id="@+id/btnGoToLogin"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/login"
                android:textSize="20sp"
                android:textColor="#2B2B2B"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
