<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">

    <!-- Password Reset header -->
    <TextView
        android:id="@+id/txtPasswordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/password_reset"
        android:textSize="32sp"
        android:textColor="#000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <!-- Email -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="390dp"
                android:layout_height="48dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <!-- Send Button -->
            <Button
                android:id="@+id/SendButton"
                android:layout_width="320dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="32dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="32dp"
                android:text="@string/send" />

            <!-- Add ProgressBar Below the Button -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
